--- a/assets/css/talkino-admin.css
+++ b/assets/css/talkino-admin.css
@@ -179,17 +179,19 @@ li.talkino_lineitem {
     line-height: 1.5em;  
 }
 
-.badge-pro-btn {
-    background-color: DodgerBlue;
-    color: white;
-    font-weight: bold;
-    border: none;
-    margin-bottom: 15px;
-    padding: 12px 16px;
-    font-size: 16px;
-    cursor: pointer;
+.dicsount.talkino {
+    color: red;
 }
 
-.badge-pro-btn:hover {
-    background-color: blue;
+.fs-2.talkino {
+    color: #0d6efd;
+}
+
+.original-price.talkino {
+    text-decoration: line-through;
+    color: gray;
+}
+
+.card-title.pricing-card-title.talkino {
+    color: red;
 }
