--- a/assets/css/talkino-admin.css
+++ b/assets/css/talkino-admin.css
@@ -8,6 +8,7 @@
 6) Other
 */
 
+/********** Agent Post Type **********/
 .talkino-contact-details-section {
     background: #f5f5f5;
     border-radius: 5px;
@@ -96,6 +97,7 @@
     }
 }
 
+/********** Ordering Setting **********/
 #talkino_channel_ordering_list, #talkino_agent_ordering_list {
     background-color: #fff;
     width: 200px; 
@@ -179,6 +181,88 @@ li.talkino_lineitem {
     line-height: 1.5em;  
 }
 
+/********** Font Awesome Icon Picker **********/
+.talkino-fa-browser-container {
+    background: rgba(0,0,0,0.5);
+    box-sizing: border-box;
+    top: 30px;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    display: flex;
+}
+
+.talkino-fa-browser-container > .talkino-window {
+    background: white;
+    box-sizing: border-box;
+    border-width: 10px;
+    border-style: solid;
+    border-radius: 10px;
+    position: relative;
+    max-width: 800px;
+    padding: 1rem;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    overflow: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.talkino-fa-browser-container > .talkino-close {
+    color: white;
+    text-shadow: 0 0 10px black;
+    font-size: 36px;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.talkino-fa-browser-container .talkino-icon {
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 1rem;
+    flex: 0 0 10%;
+    cursor: pointer
+}
+
+.talkino-fa-browser-container .talkino-icon:hover {
+    color: #8f8f8f;
+}
+
+#talkino-icon-container {
+    background: white;
+    text-align: center;
+    border-style: dashed;
+    width: 50px; 
+    padding: 10px 0 10px 0;
+    margin-bottom: 5px;
+    display: block;
+    cursor: pointer;
+}
+
+#talkino-icon-container:hover {
+    background: bottom;
+}
+
+/* xs */
+@media (max-width: 575px){
+    .talkino-fa-browser-container .talkino-icon {
+        flex: 0 0 20%;   
+    }
+    .talkino-fa-browser-container > .talkino-close {
+        top: .5rem;
+        right: .5rem;
+    }
+}
+
+/********** Extension **********/
 .dicsount.talkino {
     color: red;
 }
@@ -194,4 +278,13 @@ li.talkino_lineitem {
 
 .card-title.pricing-card-title.talkino {
     color: red;
+}
+
+/********** Review **********/
+.notice.notice-info.talkino {
+    padding-top: 10px;
+}
+
+.button.button-secondary.talkino {
+    margin-left: 5px;
 }
